--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "starter",
+  "name": "react-todo",
   "description": "Next time always clone this instead of creating a new react app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
