--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Next time always clone this instead of creating a new react app",
   "version": "0.1.0",
   "private": false,
+  "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -10,8 +11,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "push": "git add . && git commit -m \"Initial commit\" && git push",
+    "start": "react-scripts start && react-scripts test",
+    "push": "git add . && git commit -m \"project ongoing\" && git push",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
