--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
@@ -18,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "push": "git add . && git commit -m \"Initial commit\" && git push"
+    "push": "git add . && git commit -m \"finished but edit not done\" && git push"
   },
   "eslintConfig": {
     "extends": [
@@ -39,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "axios": "^1.3.1",
     "json-server": "^0.17.1",
     "react-icons": "^4.7.1",
     "sass": "^1.57.1",
